--- a/journal/201908.md
+++ b/journal/201908.md
@@ -87,7 +87,11 @@ In August the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNq
 
 {market makers: cover how owners engaged with the community and adjusted proposals in response to feedback}
 
+{rr orderbook analysis}
+
 https://www.reddit.com/r/decred/comments/cutc16/decred_events_meetups_in_the_cis_in_20192020/
+
+{proposals repo, indexes of DEX and market makers reading, argument compilations, comparison}
 
 {Dump FUD attempt https://twitter.com/cburniske/status/1163912381598248965 }
 
@@ -145,6 +149,10 @@ New merchants:
 
 {overview of outreach/communications/marketing activity for past month and any short-term plans}
 
+[Foundational Messaging](https://github.com/decredcommunity/pr/blob/release/foundational-messaging.md) was updated to v2. [Changes](https://github.com/decredcommunity/pr/commit/fc407b8f037a222db22a4507e4a5ade5b746f4dd) include Pitch, Tagline and Vision expanded with Decred's priniciples and a FAQ. Tagline was slightly tweaked to replace "Self-Funding" with "Sustainable".
+
+{Ditto please comment on the Unchained preparation that was many months in the making}
+
 ## Events
 
 Attended:
@@ -152,6 +160,8 @@ Attended:
 * Jul 2-3 - Asia Blockchain Summit 2019 - Taipei, Taiwan. @morphymore in the Decred Jacket was there to make a presence, and to explain Decred to those who wanted to learn more about the project. _(missed in July issue)_
 
 * {dates} - [{title}]({event link}) - {city}, {country}. {recap}
+
+* Vietnam AMA Coin98 ([transcript](https://github.com/noahpierau/articles/blob/master/Decred-Vietnam-AMA.md))
 
 * Aug 13-14 - 
 
@@ -200,6 +210,7 @@ Selected articles:
 * https://blog.decred.org/2019/08/21/Surveying-the-Privacy-Landscape/
 * https://cryptolinks.com/news/decreds-ambitious-vision-for-a-truly-decentralized-exchange
 * https://cryptobriefing.com/decentralized-governance-in-action-decred-debates-market-liquidity/
+* https://decrypt.co/8796/decred-aims-to-be-a-more-effective-privacy-coin-than-monero-or-zcash
 * https://decrypt.co/8801/decred-project-lead-jake-yocom-piatt-interview-profile
 * {title in Title Case} by {author} ([{domain}]({link}) - {optional comment}
 
