--- a/journal/201908.md
+++ b/journal/201908.md
@@ -175,7 +175,7 @@ Attended:
 
 * https://twitter.com/Decred_ES/status/1166132690342567938?s=20
 
-* Aug 31 - [Decred KC](https://www.meetup.com/Decred-KC/) - Kansas City, USA https://twitter.com/avonschulze/status/1166026265805172737?s=20
+* Aug 31 - [Decred KC](https://www.meetup.com/Decred-KC/) - Kansas City, USA https://twitter.com/avonschulze/status/1166026265805172737?s=20 {didn't happen?}
 
 * https://twitter.com/avonschulze/status/1166026265805172737?s=20
 
@@ -188,15 +188,12 @@ Upcoming:
 
 {announcements in Events domain}
 
-
 Alex Von Schulze is looking for people to organize the first Decred meetup in Kansas City  https://twitter.com/avonschulze/status/1166026265805172737 
 https://www.meetup.com/Decred-KC/
 
 ## Media
 
-{community efforts: Decred Assembly, websites, etc}
-
-Since April there have been a transfer of knowledge about DJ production in order to make it more "decentralized". As a result, several documents were created:
+Since April the Decred Journal has been pushing for greater decentralization of its production, this has involved writing down descriptions of how components of the Journal get made and the reasoning for making them in these ways. The idea is that by formalizing these aspects the Journal becomes less reliant on the individuals who currently contribute, and their tacit knowledge. The following documents are available, worth a look for anyone who would like to become a Journal contributor.
 
 * self-describing [template](https://github.com/xaur/decred-news/blob/docs/journal-template.md)
 * revamped [contributing](https://github.com/xaur/decred-news/blob/docs/contributing.md) page, 
@@ -207,14 +204,13 @@ Since April there have been a transfer of knowledge about DJ production in order
 
 Selected articles:
 
+* Surveying the Privacy Landscape by @jy-p ([blog.decred.org](https://blog.decred.org/2019/08/21/Surveying-the-Privacy-Landscape/))
 * Decred Q&A with @elian for Crypto Hispano ([steemit](https://steemit.com/btc/@cryptohispano01/decred-q-and-a))
-* https://medium.com/@imagnusholdings/decred-the-power-to-think-for-oneself-46b9aab9ff0e
-* https://blog.decred.org/2019/08/21/Surveying-the-Privacy-Landscape/
-* https://cryptolinks.com/news/decreds-ambitious-vision-for-a-truly-decentralized-exchange
-* https://cryptobriefing.com/decentralized-governance-in-action-decred-debates-market-liquidity/
-* https://decrypt.co/8796/decred-aims-to-be-a-more-effective-privacy-coin-than-monero-or-zcash
-* https://decrypt.co/8801/decred-project-lead-jake-yocom-piatt-interview-profile
-* {title in Title Case} by {author} ([{domain}]({link}) - {optional comment}
+* Decred | The Power to Think for Oneself by @BlackBearXVII ([medium](https://medium.com/@imagnusholdings/decred-the-power-to-think-for-oneself-46b9aab9ff0e))
+* Decred's ambitious vision for a truly decentralized exchange by Nate Urbas ([cryptolinks](https://cryptolinks.com/news/decreds-ambitious-vision-for-a-truly-decentralized-exchange))
+* Decentralized Governance in Action: Decred Debates Market Liquidity by Darren Kleine ([cryptobriefing.com]( https://cryptobriefing.com/decentralized-governance-in-action-decred-debates-market-liquidity/))
+* Decred project lead Jake Yocom-Piatt: Interview Profile by Matt Hussey ([Decrypt](https://decrypt.co/8801/decred-project-lead-jake-yocom-piatt-interview-profile))
+
 
 Translations:
 
@@ -223,16 +219,17 @@ Translations:
 Videos:
 
 * Decred's Market Maker Proposals - Crypto Governance In Action! by @Exitus ([youtube](https://www.youtube.com/watch?v=BKSMA-eanoY))
-* https://www.youtube.com/watch?v=YmQce50dfGY
+* Futurist 19 interview with @ammarooni ([youtube](https://www.youtube.com/watch?v=YmQce50dfGY))
+* 
 
 Audio:
 
-* https://unchainedpodcast.com/after-years-of-secret-work-decred-adds-a-new-feature-privacy/
-* https://www.jamesfeltonkeith.com/radioshow/episode/c3b1bb50/inclusionism-guest-akin-sawyerr-on-what-money-is
-* https://soundcloud.com/decredindepth/ep-6-working-for-the-dcr-dao-development-with-jamie-holdstock
-* https://soundcloud.com/decredindepth/ep-5-decred-as-strong-accounting-ticket-metrics-with-permabull-nino
-* https://open.spotify.com/episode/6tT4PTA572I1PAbHsZEX6N?si=s9Oa85GEQImlRSA-B3MZ5w
-* https://cryptobriefing.com/decred-struts-privacy-credentials-with-surprisingly-awesome-rap-snippet/
+* Decred in Depth Ep. 6 @jholdstock  - Jamie talks about his Decred journey, from an airdrop recipient to a part time docs contributor to his recent transition to working full-time on Decred as a developer and the reasons why that was an attractive option. ([youtube](https://www.youtube.com/watch?v=A-zcLGSYxbA))
+* Decred in Depth Ep. 7 @jy-p - Jake talks about privacy, in the general sense of surveillance capitalism and how to avoid it, why and how Company0 arrived at CoinShuffle++ as the optimal way to add privacy to Decred, and the importance of privacy to the project. ([player.fm](https://player.fm/series/decred-in-depth/jake-yocom-piatt-dcr-privacy))
+* Unchained Podcast Ep. 134 with Laura Shin - @jz gives a comprehensive intoduction to Decred and his involvement with the project, then releases initial information about Decred's new privacy option. ([unchainedpodcast.com](https://unchainedpodcast.com/after-years-of-secret-work-decred-adds-a-new-feature-privacy/)) 
+* Inclusionism: Guest Akin Sawyer on What Money Is ([jamesfeltonkeith.com]([https://www.jamesfeltonkeith.com/radioshow/episode/c3b1bb50/inclusionism-guest-akin-sawyerr-on-what-money-is))
+* Base Layer Episode 59 - Akin Sawyer (Decred) ([spotify](https://open.spotify.com/episode/6tT4PTA572I1PAbHsZEX6N?si=s9Oa85GEQImlRSA-B3MZ5w))
+* Decred Struts Privacy Credentials with Surprisingly Awesome Rap Snippet ()[cryptobriefing.com](https://cryptobriefing.com/decred-struts-privacy-credentials-with-surprisingly-awesome-rap-snippet/))
 
 ## Community Discussions
 
@@ -241,7 +238,7 @@ Comm systems news:
 * Reddit [thread](https://www.reddit.com/r/decred/comments/coppup/i_did_a_review_of_the_powpos_mechanism_used_in/) was removed where the author tried to get exposure for his project by posting a low effort review of how Decred's hybrid PoW+PoS does not work. Our moderation is transparent thanks to publicmodlogs {link}
 * Yet another case where a [question](https://www.reddit.com/r/decred/comments/cvrddy/raising_the_limit_of_coins/) received a proper answer and was quickly deleted. It was "undeleted", but the deletion of the original post caused the answer to lose visibility. This pattern discourages knowledgeable people from putting in the effort to answer questions on reddit. In this case the question poster actually [apologized](https://www.reddit.com/r/decred/comments/cvwmsz/raising_the_limit_of_coins_undelete/ey7p6qr) for deleting their post in the "undeleted" repost.
 * More impostors were detected in Telegram that promise to help with your technical problem for a modest 0.05 BTC. Beware the scammers.
-* 
+
 * {new dex dev room}
 
 {selected discussed topics, as bullet list or one paragraph per topic}
