--- a/journal/201908.md
+++ b/journal/201908.md
@@ -283,41 +283,25 @@ In context of discussing market maker proposals, [CoinMarketBook](https://coinma
 * https://bitcoinmagazine.com/articles/with-stratum-v2-braiins-plans-big-overhaul-in-pooled-bitcoin-mining
 * https://www.forbes.com/sites/ktorpey/2019/08/08/blockstream-reveals-massive-bitcoin-mining-facilities-fidelity-an-early-customer/
 
-{governance, funding, chain forks, community forks, controversy}
-
-https://blog.makerdao.com/an-update-to-maker-governance-polling/ {Maker's governance portal revamp. Looks like they're doing off-chain voting for governance polls, sounds familiar...}
-
-asset prioritizing votes
-https://vote.makerdao.com/polling-proposal/qmsnu45iv9gbed28vjaag3sqjjuyzrrzquspht7qtoccvs
-
-https://pivx.org/a-response-to-the-article-pivx-and-200-pos-chains-currently-vulnerable-chains-already-under-attack/
-
-{DEX}
-
-{related exchanges and websites}
-
-https://www.trustnodes.com/2019/08/13/youre-all-lighting-ethereum-on-fire-says-dev-amid-structural-changes
-
-Tezos Agora
-
-https://medium.com/@tezosagora/enter-agora-c9e545ce4862
-
-https://tezos.foundation/news/camlcase-receives-grant-to-develop-decentralized-exchange-protocol-on-tezos
-
 Zcash
 
-https://electriccoin.co/wp-content/uploads/2019/08/Transparency-report-Q3-2019-2.pdf
+The Zcash community continues to wrestle with the decision about how to fund development after the founders' reward ceases to channel 20% of block rewards to the ECC and other beneficiaries. There follow some short descriptions of seemingly relevant posts - following this process is quite effortful, so it is possible important items have been missed.
 
-https://forum.zcashcommunity.com/t/dev-fund-proposal-strategic-council-approach/34801
+The Zcash Foundation has [posted](https://www.zfnd.org/blog/dev-fund-guidance-and-timeline/) to make its position clear, with their preferred option being mandatory funding of a dev fund by block reward, with the stipulation that all entities receiving these funds must be not-for-profit. The ECC is presently a for-profit corporation, dedicated to the profit of its shareholders, which could conflict with the health of the network. This is a common theme to much of the discussion, people are not keen on block rewards going to a for-profit company and possibly enriching founders/investors.
 
-https://twitter.com/zooko/status/1166819884669341697?s=20
+The less preferred options are opt-in funding by miners (who would choose whether to donate or burn funds, and who to donate them to) and no dev funding. Zcash foundation has a projected burn rate of $3.7mm/year ($2mm being wages), and could operate at this level until 2023, after which point it would need alternative funding.
 
-https://twitter.com/_prestwich/status/1165390624171986944?s=09
+The Zcash Foundation is organizing a Community Governance Panel, which individuals [could](https://twitter.com/zooko/status/1166819884669341697) sign up on twitter. Outcomes of the panel are [not binding](https://www.zfnd.org/blog/governance-results/).
 
-Community governance panels
+The ECC released a [Transparency Report](https://electriccoin.co/wp-content/uploads/2019/08/Transparency-report-Q3-2019-2.pdf) which breaks down the ECC's income and outgoings during Q1 2019. ECC's effective burn rate was $635k/month in Q1, and the company holds $6.4M worth of USD and Zcash. The company had an income of $449k in Q1.
 
-People signing up on twitter for the foundation focus groups
-https://twitter.com/zooko/status/1166819884669341697?s=20
+Other proposals include a [grand compromise](https://forum.zcashcommunity.com/t/a-grand-compromise-synthesis-zip-proposal/34812) from Josh Cincinnati of the Zcash Foundation, which would instigate another 4 years of 20% block rewards, shared between EFF and ZF, with the release of 8% (4% for ECC and 4% for ZF) contingent on greater adoption of shielded transactions. 
+
+[Strategic Council Proposal](https://forum.zcashcommunity.com/t/dev-fund-proposal-strategic-council-approach/34801), which would see a continued 20% of block rewards and a board of 5 people making decisions about how it is spent. 
+
+James Prestwich has a [proposal](https://twitter.com/_prestwich/status/1165390624171986944?s=20) (in a Google doc) which criticizes the management of ECC and takes exception to the ECC using its funds to conduct marketing campaigns which aim to generate support for its continued funding. This document also highlights the power which ownership of the Zcash trademark affords ECC, and argues that no decision-making process should proceed until that issue is resolved.
+
+Zooko has [posted](https://forum.zcashcommunity.com/t/note-about-trademark-strategy/34807) to address disagreement about how the Zcash trademark should be managed. The trademark is the sole property of ECC, but there has been a long-standing agreement to share control of it with a novel legal agreement which provided a double-veto. ECC has second thoughts about sharing control in a 2-of-2 multisig type arrangement because this is prone to deadlock and inaction. Ultimately the post argues ECC should wait until the decision about funding is made to decide how control of the trademark should be decentralized.
 
 
 
@@ -327,9 +311,37 @@ https://m.icon.foundation/download/Contribution_Proposal_Paper_EN.pdf
 
 
 
+Maker [deployed](https://blog.makerdao.com/an-update-to-maker-governance-polling/) a new [Governance Voting Portal](https://vote.makerdao.com/), the UX has been improved to make voting easier and allow holders of MKR to vote on binding executive decisions (about stability fee) at the same time as voting on governance polls - something which was not previously possible. All of the content associated with governance polls is stored off chain on "any publicly accessible source". A hash of the poll is committed to the blockchain, and participants can check whether the content in the public source has been edited by checking this hash.
+
+Maker [polled](https://vote.makerdao.com/polling) voters to determine the priority for integrating 7 different assets that were pre-approved by the risk team into multi-collateral DAI. GNT (17% approval, 1.2% participation), ZRX (76% approval, 2.3% participation), OMG (38% approval, 1.2% participation), REP (92% approval, 3.6% participation), BAT(99.8% approval, 2.3% participation), ETH (100% approval, 4.3% participation), DGD (42% approval, 1.3% participation). The maximum number of unique voting wallets per proposal was 50 (for the ETH vote). These votes serve as a signal to the developers about which assets the voters would like to see added first.
+
+
+
+Tezos [launched](https://medium.com/@tezosagora/enter-agora-c9e545ce4862) its [Agora](https://www.tezosagora.org/) governance tracker, which presents live information about the current state of the protocol amendment cycle, as well as historical information about past cycles. Discussion does not happen on the Agora site directly, instead each proposal links to a [Discourse forum](https://forum.tezosagora.org/) post. The functionality afforded by Agora is on a par with the [voting.decred.org](https://voting.decred.org/) page, it presents information about consensus rule change votes. Agora has more to do in this regard, as the Tezos voting process is more complex than Decred's, with the process for deploying new consensus rules having more stages.
+
+The Babylon 2.0 proposal is currently in its testing phase, having beaten Babylon 1.0 (a previous version) in [round 1](https://www.tezosagora.org/period/16) (78% to 22%, voter turnout of 49%) and received virtually unanimous support in the [second round](https://www.tezosagora.org/period/17) (voter turnout of 82%, although only 179 of 463 bakers voted). This protocol change makes a number of improvements, adjusts the dynamic quorum rules to cap it, and mints 500 XTZ from inflation so that the developers can buy some drinks.
+
+The Tezos Foundation made a [grant](https://tezos.foundation/news/camlcase-receives-grant-to-develop-decentralized-exchange-protocol-on-tezos) to CamlCase to develop a decentralized exchange protocol, inspired by Uniswap, on the Tezos blockchain. There are no details about the amount of the grant in the announcement.
+
+https://pivx.org/a-response-to-the-article-pivx-and-200-pos-chains-currently-vulnerable-chains-already-under-attack/
+
+{DEX}
+
+{related exchanges and websites}
+
+https://www.trustnodes.com/2019/08/13/youre-all-lighting-ethereum-on-fire-says-dev-amid-structural-changes
+
+
+
+
+
 Moloch Bribery?
 
 https://twitter.com/santisiri/status/1165653044383690753?s=20
+
+https://www.trustnodes.com/2019/08/13/youre-all-lighting-ethereum-on-fire-says-dev-amid-structural-changes
+
+https://ethresear.ch/t/quadratic-voting-with-sortition/6065
 
 
 
@@ -345,7 +357,7 @@ https://www.coindesk.com/steemit-to-automate-development-funding-with-new-dao
 
 
 
-https://www.trustnodes.com/2019/08/13/youre-all-lighting-ethereum-on-fire-says-dev-amid-structural-changes
+
 
 
 
