add more rel ext

--- a/journal/201908.md
+++ b/journal/201908.md
@@ -285,11 +285,11 @@ In context of discussing market maker proposals, [CoinMarketBook](https://coinma
 
 Zcash
 
-The Zcash community continues to wrestle with the decision about how to fund development after the founders' reward ceases to channel 20% of block rewards to the ECC and other beneficiaries. There follow some short descriptions of seemingly relevant posts - following this process is quite effortful, so it is possible important items have been missed.
+The Zcash community continues to wrestle with the decision about how to fund development after the founders' reward ceases to channel 20% of block rewards to the ECC, Zcash Foundation and other beneficiaries. There follow some short descriptions of seemingly relevant posts - following this process is quite effortful, so it is possible important items have been missed.
 
-The Zcash Foundation has [posted](https://www.zfnd.org/blog/dev-fund-guidance-and-timeline/) to make its position clear, with their preferred option being mandatory funding of a dev fund by block reward, with the stipulation that all entities receiving these funds must be not-for-profit. The ECC is presently a for-profit corporation, dedicated to the profit of its shareholders, which could conflict with the health of the network. This is a common theme to much of the discussion, people are not keen on block rewards going to a for-profit company and possibly enriching founders/investors.
+The Zcash Foundation (ZF) has [posted](https://www.zfnd.org/blog/dev-fund-guidance-and-timeline/) to make its position clear, their preferred option is mandatory funding of a dev fund by block reward, with the stipulation that all entities receiving these funds must be not-for-profit. The ECC is presently an ordinary corporation, dedicated to the profit of its shareholders, whose interests could conflict with the health of the network. This is a common theme to much of the discussion, people are not keen on block rewards going to a for-profit company and possibly enriching founders/investors.
 
-The less preferred options are opt-in funding by miners (who would choose whether to donate or burn funds, and who to donate them to) and no dev funding. Zcash foundation has a projected burn rate of $3.7mm/year ($2mm being wages), and could operate at this level until 2023, after which point it would need alternative funding.
+ZF's less preferred options are opt-in funding by miners (who would choose whether to donate or burn funds, and who to donate them to) and no dev funding. Zcash foundation has a projected burn rate of $3.7mm/year ($2mm being wages), and could operate at this level until 2023, after which point it would need alternative funding.
 
 The Zcash Foundation is organizing a Community Governance Panel, which individuals [could](https://twitter.com/zooko/status/1166819884669341697) sign up on twitter. Outcomes of the panel are [not binding](https://www.zfnd.org/blog/governance-results/).
 
@@ -297,25 +297,17 @@ The ECC released a [Transparency Report](https://electriccoin.co/wp-content/uplo
 
 Other proposals include a [grand compromise](https://forum.zcashcommunity.com/t/a-grand-compromise-synthesis-zip-proposal/34812) from Josh Cincinnati of the Zcash Foundation, which would instigate another 4 years of 20% block rewards, shared between EFF and ZF, with the release of 8% (4% for ECC and 4% for ZF) contingent on greater adoption of shielded transactions. 
 
-[Strategic Council Proposal](https://forum.zcashcommunity.com/t/dev-fund-proposal-strategic-council-approach/34801), which would see a continued 20% of block rewards and a board of 5 people making decisions about how it is spent. 
+[Strategic Council Proposal](https://forum.zcashcommunity.com/t/dev-fund-proposal-strategic-council-approach/34801), which would see a continued 20% of block rewards and a board of 5 people making decisions about how it is spent. This comes from avichal, a serial entrepreneur and founder of Electric Capital, which invests in a number of layer 1 protocols (but not Zcash). 
 
 James Prestwich has a [proposal](https://twitter.com/_prestwich/status/1165390624171986944?s=20) (in a Google doc) which criticizes the management of ECC and takes exception to the ECC using its funds to conduct marketing campaigns which aim to generate support for its continued funding. This document also highlights the power which ownership of the Zcash trademark affords ECC, and argues that no decision-making process should proceed until that issue is resolved.
 
-Zooko has [posted](https://forum.zcashcommunity.com/t/note-about-trademark-strategy/34807) to address disagreement about how the Zcash trademark should be managed. The trademark is the sole property of ECC, but there has been a long-standing agreement to share control of it with a novel legal agreement which provided a double-veto. ECC has second thoughts about sharing control in a 2-of-2 multisig type arrangement because this is prone to deadlock and inaction. Ultimately the post argues ECC should wait until the decision about funding is made to decide how control of the trademark should be decentralized.
+Zooko has [posted](https://forum.zcashcommunity.com/t/note-about-trademark-strategy/34807) to address disagreement about how the Zcash trademark should be managed. The trademark is the sole property of ECC, but there has been a long-standing agreement to share control of it with a novel legal agreement which provided a double-veto. ECC has second thoughts about sharing control in a 2-of-2 multisig type arrangement because this is prone to deadlock and inaction. Ultimately the post argues ECC should wait until the decision about funding is made to decide how control of the trademark should be decentralized. 
 
-
-
-ICX platform, tweet references Decred
-
-https://m.icon.foundation/download/Contribution_Proposal_Paper_EN.pdf
-
-
+Icon announced a [paper](https://m.icon.foundation/download/Contribution_Proposal_Paper_EN.pdf) about how their Contribution Proposal system will work. Proposals will be submitted on chain (with a security deposit of around $100 minimum), where a majority vote (of "ICONists", but I think this just means people staking ICX) will determine whether the proposal is approved to receive funding. Approved proposals are allowed to receive delegation, and in effect the proposal receives a share of available funding determined by the proportion of staked ICX delegated to it. Progress reports will be required for all approved proposals every 30 days, ICX stakeholders read these proposals and can rescind a proposal's approval with a majority vote. It is not clear what the target is for this system to be complete and in production.
 
 Maker [deployed](https://blog.makerdao.com/an-update-to-maker-governance-polling/) a new [Governance Voting Portal](https://vote.makerdao.com/), the UX has been improved to make voting easier and allow holders of MKR to vote on binding executive decisions (about stability fee) at the same time as voting on governance polls - something which was not previously possible. All of the content associated with governance polls is stored off chain on "any publicly accessible source". A hash of the poll is committed to the blockchain, and participants can check whether the content in the public source has been edited by checking this hash.
 
 Maker [polled](https://vote.makerdao.com/polling) voters to determine the priority for integrating 7 different assets that were pre-approved by the risk team into multi-collateral DAI. GNT (17% approval, 1.2% participation), ZRX (76% approval, 2.3% participation), OMG (38% approval, 1.2% participation), REP (92% approval, 3.6% participation), BAT(99.8% approval, 2.3% participation), ETH (100% approval, 4.3% participation), DGD (42% approval, 1.3% participation). The maximum number of unique voting wallets per proposal was 50 (for the ETH vote). These votes serve as a signal to the developers about which assets the voters would like to see added first.
-
-
 
 Tezos [launched](https://medium.com/@tezosagora/enter-agora-c9e545ce4862) its [Agora](https://www.tezosagora.org/) governance tracker, which presents live information about the current state of the protocol amendment cycle, as well as historical information about past cycles. Discussion does not happen on the Agora site directly, instead each proposal links to a [Discourse forum](https://forum.tezosagora.org/) post. The functionality afforded by Agora is on a par with the [voting.decred.org](https://voting.decred.org/) page, it presents information about consensus rule change votes. Agora has more to do in this regard, as the Tezos voting process is more complex than Decred's, with the process for deploying new consensus rules having more stages.
 
@@ -323,43 +315,15 @@ The Babylon 2.0 proposal is currently in its testing phase, having beaten Babylo
 
 The Tezos Foundation made a [grant](https://tezos.foundation/news/camlcase-receives-grant-to-develop-decentralized-exchange-protocol-on-tezos) to CamlCase to develop a decentralized exchange protocol, inspired by Uniswap, on the Tezos blockchain. There are no details about the amount of the grant in the announcement.
 
-https://pivx.org/a-response-to-the-article-pivx-and-200-pos-chains-currently-vulnerable-chains-already-under-attack/
+Steemit [announced](https://www.coindesk.com/steemit-to-automate-development-funding-with-new-dao) a hard fork for Aug 27 to enable a [worker proposal system](https://steemit.com/blocktrades/@blocktrades/proposing-a-worker-proposal-system-for-steem) or DAO to administer funding from block rewards - with the intention of speeding up and decentralizing development. Steem users make stake-weighted votes to prioritize funding requests, the top proposals are funded until the available budget is spent.
 
-{DEX}
+[Sellout DAO](https://devpost.com/software/sellout-dao) was created to demonstrate that members of MolochDAO (or Moloch clones) can sell their right to submit proposals with a smart proxy contract that allows the highest bidder to submit a proposal. This [initial version](https://selloutdao.com/) seems to have been for demo purposes only, but version 2 is apparently coming.
 
-{related exchanges and websites}
+The /r/ethtrader moderator team and community seems to have undergone a [hard fork](https://www.reddit.com/r/ethtrader/comments/cs84ar/6_of_10_moderators_are_leaving_ethtrader_a/), as 6 moderators resigned to start /r/ethfinance because the lead moderator had been making unilateral decisions and stripping moderator status from mods who disagreed with him. Part of the disagreement was about the Donuts experiment, with the lead moderator having many [more](https://www.reddit.com/r/ethtrader/comments/cs84ar/6_of_10_moderators_are_leaving_ethtrader_a/exe5mo0) Donuts than anyone else and failing to update other moderators on progress with the reddit admins.
 
-https://www.trustnodes.com/2019/08/13/youre-all-lighting-ethereum-on-fire-says-dev-amid-structural-changes
+PIVX is dealing with an issue where some small stakers are receiving much greater rewards than they should be, in a long [post](https://pivx.org/a-response-to-the-article-pivx-and-200-pos-chains-currently-vulnerable-chains-already-under-attack/) about it a PIVX ambassador makes the case that the situation is not as severe as another [article](https://hackernoon.com/pivx-and-all-pivx-forks-vulnerable-in-a-pos-exploit-several-chains-already-under-attack-vx13xf3vqy) implied, and considers the difficult position PIVX developers are in with hundreds of forks relying on their codebase. 
 
-
-
-
-
-Moloch Bribery?
-
-https://twitter.com/santisiri/status/1165653044383690753?s=20
-
-https://www.trustnodes.com/2019/08/13/youre-all-lighting-ethereum-on-fire-says-dev-amid-structural-changes
-
-https://ethresear.ch/t/quadratic-voting-with-sortition/6065
-
-
-
-Daonuts
-
-https://www.reddit.com/r/ethtrader/comments/cs84ar/6_of_10_moderators_are_leaving_ethtrader_a/
-
-
-
-https://www.coindesk.com/despite-ceo-claims-dash-isnt-really-the-most-used-crypto-in-venezuela
-
-https://www.coindesk.com/steemit-to-automate-development-funding-with-new-dao
-
-
-
-
-
-
+A Coindesk [article](https://www.coindesk.com/despite-ceo-claims-dash-isnt-really-the-most-used-crypto-in-venezuela) explored the reality of Dash adoption in Venezuela, suggesting that it was not being used as widely as claimed by some Dash representatives, and that some of the programs to promote adoption among merchants were ineffective.
 
 {other: regulations, security, fun}
 
