--- a/journal/201908.md
+++ b/journal/201908.md
@@ -23,9 +23,12 @@
 
 [Politeia](https://github.com/decred/politeia):
 
+Work [ongoing](https://github.com/decred/politeia/pull/981) on DCC process support
+
 Discussion:
 
 * Multiple choice voting https://github.com/decred/politeia/issues/966
+* 
 
 [dcrstakepool](https://github.com/decred/dcrstakepool): {}
 
@@ -236,7 +239,7 @@ Comm systems news:
 * Yet another case where a [question](https://www.reddit.com/r/decred/comments/cvrddy/raising_the_limit_of_coins/) received a proper answer and was quickly deleted. It was "undeleted", but the deletion of the original post caused the answer to lose visibility. This pattern discourages knowledgeable people from putting in the effort to answer questions on reddit. In this case the question poster actually [apologized](https://www.reddit.com/r/decred/comments/cvwmsz/raising_the_limit_of_coins_undelete/ey7p6qr) for deleting their post in the "undeleted" repost.
 * More impostors were detected in Telegram that promise to help with your technical problem for a modest 0.05 BTC. Beware the scammers.
 
-* {new dex dev room}
+* {new dex dev room. rr: put this in dev section? it's not a room for random people to show up and chat in}
 
 {selected discussed topics, as bullet list or one paragraph per topic}
 
