--- a/journal/201908.md
+++ b/journal/201908.md
@@ -86,7 +86,31 @@ Following the events in Ho Chi Minh City, Vietnamese Telegram, Twitter and Faceb
 
 In August the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received 15,278 DCR and spent 8,223 DCR. Using August's daily average DCR/USD rate of $26.23, this is $401K received and $216K spent. As these payments were for work completed in July, it is also informative to consider them in the context of the July average daily rate of $28.97 - in which case the USD spent figure is $238K. As of {date}, Treasury balance is {n} DCR ({n.nn} million USD at ${n.nn}).
 
-{high level recap of decision-making activity and most important events. link to Politeia Digest for higher detail}
+A DEX development [proposal](https://proposals.decred.org/proposals/417607aaedff2942ff3701cdb4eff76637eca4ed7f7ba816e5c0bd2e971602e1) from @chappjc and @buck54321 (who work on dcrdata), with support from Company 0, was submitted, and approved with 90% Yes votes. This proposal has an estimated cost of $230,000 to deliver a command-line interface application, which can be extended by future proposals to offer a user interface using the Electron Framework.
+
+The decredcommunity proposals [repository](https://github.com/decredcommunity/proposals) has an [index](https://github.com/decredcommunity/proposals/blob/master/dex/index.md) of DEX-related material.
+
+3 Market Maker proposals were published on Aug 7, from [Altonomy](https://proposals.decred.org/proposals/772d083fef79fa2e443d8424b353deadc3af69c8d8764e473cb200f98f356c60), [i2 Trading](https://proposals.decred.org/proposals/2eb7ddb29f151691ba14ac8c54d53f6692c1f5e8fe06244edf7d3c33fb440bd9) and [Grapefruit Trading](https://proposals.decred.org/proposals/4becbe00bd5ae93312426a8cf5eeef78050f5b8b8430b45f3ea54ca89213f82b). After a few days of discussion the dominant topic was whether the Treasury should be used to hire market makers at all. @jz submitted an [RFP proposal](https://proposals.decred.org/proposals/30822c16533890abc6e243eb6d12264b207c3923c14af42cd9b883e71c7003cd) to establish whether the stakeholders wanted to hire a designated market maker in principle. The proposal explained the process which @jz, @maxbronstein and Chris Burniske had undertaken prior to the submission of the proposals - and made a case for approving one of these proposals. The RFP proposal also clarified the terms of the vote (a maximum of 1 market maker proposal can be approved and it must meet the usual criteria). 
+
+Altonomy submitted a proposal to offer $50k each side on 10 pairs, they were actively engaged on Politeia and provided answers to many questions, but on Aug 16 they withdrew their proposal, editing it to say "Sorry, due to our technical capacity, we decided to withdraw this proposal."
+
+i2 Trading submitted a proposal to offer $50k each side on 6 pairs, they engaged actively on Politeia and in the #proposals channel, answering the majority of questions. In response to concerns about transparency, i2 offered to allow a Decred representative read-only access to their exchange accounts for limited periods of time. i2 made a number of edits to their proposal, to add a note about providing API access, clarify the borrowing need and terms, and then amending their offer to loosen the spreads, reduce the maximum fees per month to $10k/month, and drop the fees from $40k/month to $35k/month.
+
+Grapefruit started with 2 offers in their proposal (both for $30k each side on 4 pairs), one with a tighter spread that would cost $40k/month in fees and one with a looser spread that would cost $28k/month in fees. @grapefruittrading answered questions on Politeia on Aug 8 and 20, ignoring some questions while offering [substantive](https://proposals.decred.org/proposals/4becbe00bd5ae93312426a8cf5eeef78050f5b8b8430b45f3ea54ca89213f82b/comments/6) [replies](https://proposals.decred.org/proposals/4becbe00bd5ae93312426a8cf5eeef78050f5b8b8430b45f3ea54ca89213f82b/comments/5) to others. Before authorizing voting to start, @grapefruittrading edited their proposal to remove the more expensive offer, choosing to run with the less expensive offer as they perceived a demand for that from stakeholders and it was their preferred option anyway. 
+
+i2 and Grapefruit authorized voting to begin on their proposals on Aug 27. 
+
+Tantra Labs submitted a [proposal](https://proposals.decred.org/proposals/82ce113827140caaaf8b5779ab30402d3ed39f1911fdd2e8fa64cf0dc9e09ecb) on Aug 28 which offered a very different proposition, $30k each side at up to 3% spread on 6 ([or 7](https://proposals.decred.org/proposals/82ce113827140caaaf8b5779ab30402d3ed39f1911fdd2e8fa64cf0dc9e09ecb/comments/8)) pairs, with no fees being charged to the Treasury. Instead, the Treasury would only be charged for the cost of borrowing the inventory and up to $10k/month in trading fees. Tantra offered to allow a Decred representative to have read-only access to their exchange accounts to "elected" Decred representatives, so that the promised availability of liquidity can be verified. Tantra also propose providing a web interface offering an interface to a set of open source order book transparency tools. 
+
+Much of the discussion of Tantra's proposal concerns whether it is too good to be true, with a number of people expressing their doubts that Tantra could deliver what they propose, and wondering if the low cost comes with hidden downsides. Tantra have been active in #proposals and have answered some of the questions on Politeia. Some members of the community grew inpatient waiting for Tantra to authorize the start of voting, illuminating an issue with RFP proposals being slowed down out by late submissions, and highlighting the value of a defined timetable.
+
+A fourth [proposal](https://proposals.decred.org/proposals/c9604f7879e4b2cd4f2582d238a7ccea210005c63481bec1ddae44ff93e1340f) about market making, submitted by @betterfuture, was published on Aug 31. This proposes a scheme for incentivizing market makers to provide liquidity on specific pairs without a firm commitment. The proposal describes rules and penalties for keeping participants in line, and would require a trusted intermediary representing the Decred project to audit the activities of the market makers. @jz was nominated for this role in the proposal, but he has [stated](https://proposals.decred.org/proposals/c9604f7879e4b2cd4f2582d238a7ccea210005c63481bec1ddae44ff93e1340f/comments/5) that he would not wish to take it on. Deliberation and refinement of this proposal is being viewed as a long term effort by its proponents, and it will not be competing with the other proposals.
+
+Voting commenced for the 3 market maker proposals on Sep 4.
+
+
+
+
 
 {market makers: cover how owners engaged with the community and adjusted proposals in response to feedback}
 
@@ -96,7 +120,7 @@ https://www.reddit.com/r/decred/comments/cutc16/decred_events_meetups_in_the_cis
 
 {proposals repo, indexes of DEX and market makers reading, argument compilations, comparison}
 
-{Dump FUD attempt https://twitter.com/cburniske/status/1163912381598248965 }
+
 
 ## Network
 
@@ -262,6 +286,7 @@ Selected Twitter discussions:
 * https://twitter.com/DCRtheSOV/status/1163514060542894080?s=20
 * https://twitter.com/blockchainbuck/status/1162032971123220482?s=20
 * https://twitter.com/_Checkmatey_/status/1157342578787913733?s=20
+* Chris Burniske of Placeholder VC [clarified](https://twitter.com/cburniske/status/1163912381598248965 ) that Placeholder are not liquidating their DCR position, after an impersonator was seen on Telegram supposedly looking for buyers for their DCR.
 
 New Twitter account [@DCRtheSOV](https://twitter.com/DCRtheSOV) aims to [become](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$15650685647545vLtzj:decred.org) a reputable source of news and analysis covering Decred and is looking for feedback.
 
