--- a/journal/201908.md
+++ b/journal/201908.md
@@ -17,6 +17,26 @@
 
 [dcrd](https://github.com/decred/dcrd): {}
 
+Too many PRs to dump here. Have put closed PR notes in this [gist](https://gist.github.com/s-ben/40fca92ca237232daaa2adffcb53ddc1). Below is a stab at summary copy. 
+
+In order to make use of major version updates in a number of modules (blockchain/stake/v2, blockchain/standalone, blockchain/v2, chaincfg/v2, dcrutil/v2, mining/v2, and txscript/v2), several modules were updated to major versions as well, including the [mempool](https://github.com/decred/dcrd/pull/1835), [peer](https://github.com/decred/dcrd/pull/1834), and [connmgr](https://github.com/decred/dcrd/pull/1833) modules. The main module was also [updated](https://github.com/decred/dcrd/pull/1837) to use all of the latest major module versions. 
+
+Work has begun on a [new module](https://github.com/decred/dcrd/pull/1808) named `blockchain/standale`, which aims to provide several of the standalone functions currently available in the blockchain module and ultimately replace them in the next major version. 
+
+The primary goal of offering these functions via a separate module is to reduce dependencies. It will also be beneficial for applications such as lightweight clients that need to ensure basic security properties and calculate vote subsidies and block explorers. For example, an SPV wallet could use the new function to prove to more efficiently verify blockchain data. The blockchain/standalone module will not be released until the remaining functions have been implemented. it will ship with comprehensive tests, full package documentation, and basic usage examples.
+
+As part of the onging process to cleanup and improve the gcs module to the quality level required by consensus code for ultimate inclusion in header commitments, support for [empty filters](https://github.com/decred/dcrd/pull/1844) has been added and unused functions and tests have been [removed](https://github.com/decred/dcrd/pull/1843). The primary gcs filter logic has been [refactored](https://github.com/decred/dcrd/pull/1848) into an internal struct with a version parameter in in order to pave the way for supporting v2 filters which will have a different serialization that makes them incompatible with v1 filters while still retaining the ability to work with v1 filters in the interim. Support has been [added](https://github.com/decred/dcrd/pull/1854) for independent false positive rate and Golomb coding bin size. Among other things, this permits more optimal parameters for minimizing the filter size to be specified. This capability will be used in the upcoming version 2 filters that will ultimately be included in header commitments.The Hash method of bus filters was [optimized](https://github.com/decred/dcrd/pull/1853 ) by making use of the new zero-alloc function available in crypto/blake256. A benchmark function was added to measure performance of the BenchmarkHash function. Tests have been [added](https://github.com/decred/dcrd/pull/1855) for bit reader/writer. A [fix](https://github.com/decred/dcrd/pull/1857) has been made so that filters properly match search items which happen to hash to zero and adds a test for the condition. While here, it also rewrites the MatchAny function to make it easier to reason about.
+
+The v2 test database names have been [updated](https://github.com/decred/dcrd/pull/1824) to avoid conflicts when multiple database modules are being tested concurrently.
+
+The Blake256 implementation has been [forked](https://github.com/decred/dcrd/pull/1811) and modified so that dcdd does not have an external dependency anymore for the Black256 hashing function. 
+
+In the connmgr module, support has been [added](https://github.com/decred/dcrd/pull/1849) for TorLookupIPContext, deprecating TorLookupIP.
+
+The chaincfg module [defines](https://github.com/decred/dcrd/pull/1813) several new functions on the Params struct which return some subsidy-related parameters. This will allow the parameters to be used directly as input to an interface in the future.
+
+Typo fixes, improved error messages and other code cleanup {SB: mention new contributor aarcamp which found a bunch of these?}
+
 [dcrwallet](https://github.com/decred/dcrwallet): {}
 
 [Decrediton](https://github.com/decred/decrediton): {}
