--- a/journal/201908.md
+++ b/journal/201908.md
@@ -312,13 +312,13 @@ New Twitter account [@DCRtheSOV](https://twitter.com/DCRtheSOV) aims to [become]
 
 ## Markets
 
-In August DCR was trading between USD {n.nn}-{n.nn} / BTC {}-{}. The average daily rate was ${n.nn}.
+In August DCR was trading between USD 22.63-32.17 / BTC 0.00275-0.00227. The average daily rate was $26.23.
 
-{markets overview: USD and BTC prices, highs and lows, interesting events, interesting analysis}
+Bitcoin has again been occelating around the 10,000$ mark most of August briefly hitting 12,200 USD. Many are speculating that the upcoming launch of ["Bakkt"](https://cointelegraph.com/news/bitcoin-price-will-bakkts-launch-this-month-take-btc-to-new-highs) will make bitcoin break this cycle.
 
 In context of discussing market maker proposals, [CoinMarketBook](https://coinmarketbook.cc/) argues "Market cap is a lie. Buy support tells the true story". As of 2019-08-19, DCR is #95 in that rating with only $260K of buy support at 10% distance from highest bid price. For context: BTC has $360M, ETH $55M, LTC $23M, XMR $9.5M, DASH $5.7M, DOGE $4.6M.
 
-{Add some notes about order book analysis?}
+{Add some notes about order book analysis?} {Can RR get this ?}
 
 ## Relevant External
 
