--- a/journal/201908.md
+++ b/journal/201908.md
@@ -180,7 +180,8 @@ Exchange integrations:
 
 {wallets}
 
-https://twitter.com/ellipalwallet/status/1163771448042803201 (hardware wallet ?)
+"ELLIPAL" a cold wallet had [announced](https://twitter.com/ellipalwallet/status/1163771448042803201) that their upcoming device "ELLIPAL Titan" will support decred. 
+
 
 Warning: the authors of Decred Journal have no idea about the trustworthiness of any of the services above. Please do your own research before trusting your personal information or assets to any entity.
 
