--- a/journal/201908.md
+++ b/journal/201908.md
@@ -180,6 +180,8 @@ Exchange integrations:
 
 {wallets}
 
+The very popular Exodus wallet has [added](https://twitter.com/exodus_io/status/1168886493617840131) support for decred on their mobile wallet. 
+
 "ELLIPAL" a cold wallet had [announced](https://twitter.com/ellipalwallet/status/1163771448042803201) that their upcoming device "ELLIPAL Titan" will support decred. 
 
 
