--- a/journal/201908.md
+++ b/journal/201908.md
@@ -127,17 +127,20 @@ A fourth [proposal](https://proposals.decred.org/proposals/c9604f7879e4b2cd4f258
 
 Voting commenced for the 3 market maker proposals on Sep 4.
 
+For a more detailed consideration of the market maker proposals and other Politeia activity, check out Politeia Digest issues [20](https://github.com/RichardRed0x/politeia-digest/blob/master/issue-020.md) (Aug 1-12) and [21](https://github.com/RichardRed0x/politeia-digest/blob/master/issue-021.md) (Aug 13-31). There are also a number of community-produced resources which aim to help people who are new to the idea of market making to understand it, and which make comparisons between the different proposals.
 
+- an index of all notable documents and discussions related to market makers is maintained [here](https://github.com/decredcommunity/proposals/blob/master/market-makers/index.md)
+- [comparison table](https://github.com/decredcommunity/proposals/blob/master/market-makers/comparison.md) which aims to compare the proposals in terms of their offers and costs
+- @bee has written up a comprehensive [overview](https://github.com/decredcommunity/proposals/blob/master/market-makers/arguments.md) of the discussion in relation to specific questions and arguments, and also a detailed [dissection](https://github.com/xaur/writings/blob/master/20190822-dissection-market-makers-for-decred.md) of the subject, introducing relevant terms and presenting an overview of the key considerations.
+- @exitus has produced a [video overview](https://www.youtube.com/watch?v=BKSMA-eanoY) of the proposals.
 
-
+It is worth mentioning the Decred community proposals [repository](https://github.com/decredcommunity/proposals), where a number of the above resources can be found. This repository was created as a place to collect the information that emerges from discussion and analysis of proposals. 
 
 {market makers: cover how owners engaged with the community and adjusted proposals in response to feedback}
 
 {rr orderbook analysis}
 
-https://www.reddit.com/r/decred/comments/cutc16/decred_events_meetups_in_the_cis_in_20192020/
-
-{proposals repo, indexes of DEX and market makers reading, argument compilations, comparison}
+A reddit [post](https://www.reddit.com/r/decred/comments/cutc16/decred_events_meetups_in_the_cis_in_20192020/) was submitted which is intended to serve as a pre-proposal for funding of Decred events and meetups in the Commonwealth of Independent States (CIS) - specifically Russia, Ukraine and Georgia.
 
 
 
@@ -275,7 +278,7 @@ Audio:
 * Unchained Podcast Ep. 134 with Laura Shin - @jz gives a comprehensive intoduction to Decred and his involvement with the project, then releases initial information about Decred's new privacy option. ([unchainedpodcast.com](https://unchainedpodcast.com/after-years-of-secret-work-decred-adds-a-new-feature-privacy/)) 
 * Inclusionism: Guest Akin Sawyer on What Money Is ([jamesfeltonkeith.com]([https://www.jamesfeltonkeith.com/radioshow/episode/c3b1bb50/inclusionism-guest-akin-sawyerr-on-what-money-is))
 * Base Layer Episode 59 - Akin Sawyer (Decred) ([spotify](https://open.spotify.com/episode/6tT4PTA572I1PAbHsZEX6N?si=s9Oa85GEQImlRSA-B3MZ5w))
-* Decred Struts Privacy Credentials with Surprisingly Awesome Rap Snippet ()[cryptobriefing.com](https://cryptobriefing.com/decred-struts-privacy-credentials-with-surprisingly-awesome-rap-snippet/))
+* Decred Struts Privacy Credentials with Surprisingly Awesome Rap Snippet ([cryptobriefing.com](https://cryptobriefing.com/decred-struts-privacy-credentials-with-surprisingly-awesome-rap-snippet/))
 
 ## Community Discussions
 
