add dcrdex to dev

--- a/journal/201908.md
+++ b/journal/201908.md
@@ -49,6 +49,8 @@ The question of how to support RFP type proposals on Politeia has been the subje
 
 
 
+[dcrdex](https://github.com/decred/dcrdex): The dcrdex repository was created in July {not clear on this, earliest commits are July} to house the Dex [Specification](https://github.com/decred/dcrdex/tree/master/spec), and the first substantive PRs on the software are already [open](https://github.com/decred/dcrdex/pull/17). A [channel](https://matrix.to/#/!EzTSRQITaqHuFBDFhM:decred.org/$_2Wr5NR0S134vjG7iy3jdkMbm4dZ3uOXGQcYDGU9O-M?via=decred.org&via=matrix.org&via=zettaport.com) was also created for DEX Development chat on Matrix. 
+
 [dcrstakepool](https://github.com/decred/dcrstakepool): {}
 
 [dcrlnd](https://github.com/decred/dcrlnd): {}
@@ -99,7 +101,7 @@ Community stats:
 * LinkedIn followers: 603 (+12)
 * GitHub dcrd stars: 516 (+18), forks: 1,383 (+18)
 
-Following the events in Ho Chi Minh City, Vietnamese Telegram, Twitter and Facebook accounts have been created. Full list of Decred social media groups [here]({wiki social media}). {is it ok/fair to highlight certain local communities like this?}
+Following the events in Ho Chi Minh City, Vietnamese Telegram, Twitter and Facebook accounts have been created. Full list of Decred social media groups [here]({wiki social media}). {is it ok/fair to highlight certain local communities like this? rr: yes I think that's fine, good to highlights communities where significant things happened in the month}
 
 ## Governance
 
@@ -292,9 +294,7 @@ Comm systems news:
 
 {selected discussed topics, as bullet list or one paragraph per topic}
 
-* {VN AMA 309 comments}
-  - https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$15666653176958nkoPq:decred.org
-  - https://github.com/noahpierau/articles/blob/master/Decred-Vietnam-AMA.md }
+* An AMA with the Vietnamese community was conducted on Facebook by @Haon and Việt Anh Đàm. There were a total of 309 comments (including answers), and a transcript is available [here](https://github.com/noahpierau/articles/blob/master/Decred-Vietnam-AMA.md).
 
 Selected Reddit posts:
 
