--- a/journal/201908.md
+++ b/journal/201908.md
@@ -211,7 +211,7 @@ To continue support of the Privacy release, Anshawblack released [Privacy Flow](
 
 At the time of publication, the Ditto team continues to work on ways to keep Decred Privacy top of mind, and it seems like a timely issue with [recent news of Google wrongdoing.](https://www.ft.com/content/e3e1697e-ce57-11e9-99a4-b5ded7a7fe3f) Additionally, Dustorf will soon publish a blog entry on Medium targeting the less technical crowd.
 
-Outreach has made a concerted effort to increase engagement on twitter via quality content and education regarding Decred. This was demonstrated by project impression counts more than doubling from July to over 5.6MM.
+Outreach has made a concerted effort to increase engagement on twitter via quality content and education regarding Decred. This was demonstrated by project impression counts more than doubling from July to over 5.6MM. One of the messages that gained the most amount of traction was [a 4-paart tweet storm on the announcement of the DEX specs](https://twitter.com/decredproject/status/1156652694502817793?s=20)
 
 Decred has confirmed it's booth presence at [Websummit](https://websummit.com/), November 4-7, in Lisbon, Portugal, so please connect with us in the events_planning room in Matrix if you're interesting in helping out. We're also planning a roadshow in Asia, but don't have any details to share at the time of publication.
 
