--- a/journal/201908.md
+++ b/journal/201908.md
@@ -215,7 +215,7 @@ Outreach has made a concerted effort to increase engagement on twitter via quali
 
 Decred has confirmed it's booth presence at [Websummit](https://websummit.com/), November 4-7, in Lisbon, Portugal, so please connect with us in the events_planning room in Matrix if you're interesting in helping out. We're also planning a roadshow in Asia, but don't have any details to share at the time of publication.
 
-[Foundational Messaging](https://github.com/decredcommunity/pr/blob/release/foundational-messaging.md) was updated to v2. [Changes](https://github.com/decredcommunity/pr/commit/fc407b8f037a222db22a4507e4a5ade5b746f4dd) include Pitch, Tagline and Vision expanded with Decred's priniciples and a FAQ. Tagline was slightly tweaked to replace "Self-Funding" with "Sustainable".
+[Foundational Messaging](https://github.com/decredcommunity/pr/blob/release/foundational-messaging.md) was updated to v2. [Changes](https://github.com/decredcommunity/pr/commit/fc407b8f037a222db22a4507e4a5ade5b746f4dd) include Pitch, Tagline and Vision expanded with Decred's principles and a FAQ. Tagline was slightly tweaked to replace "Self-Funding" with "Sustainable".
 
 {Ditto please comment on the Unchained preparation that was many months in the making}
 
@@ -329,7 +329,7 @@ New Twitter account [@DCRtheSOV](https://twitter.com/DCRtheSOV) aims to [become]
 
 In August DCR was trading between USD 22.63-32.17 / BTC 0.00275-0.00227. The average daily rate was $26.23.
 
-Bitcoin has again been occelating around the 10,000$ mark most of August briefly hitting 12,200 USD. Many are speculating that the upcoming launch of ["Bakkt"](https://cointelegraph.com/news/bitcoin-price-will-bakkts-launch-this-month-take-btc-to-new-highs) will make bitcoin break this cycle.
+Bitcoin has again been oscillating around the 10,000$ mark most of August briefly hitting 12,200 USD. Many are speculating that the upcoming launch of ["Bakkt"](https://cointelegraph.com/news/bitcoin-price-will-bakkts-launch-this-month-take-btc-to-new-highs) will make bitcoin break this cycle.
 
 In context of discussing market maker proposals, [CoinMarketBook](https://coinmarketbook.cc/) argues "Market cap is a lie. Buy support tells the true story". As of 2019-08-19, DCR is #95 in that rating with only $260K of buy support at 10% distance from highest bid price. For context: BTC has $360M, ETH $55M, LTC $23M, XMR $9.5M, DASH $5.7M, DOGE $4.6M.
 
